<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MergeWindow" Id="{f5232782-7cc6-0b7d-2144-5995276e0ded}">
    <Declaration><![CDATA[TYPE ST_MergeWindow :
STRUCT
	Latch	: BOOL;
	timestamp : ULINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>