<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_PosnTime" Id="{910c80f1-6841-06f0-3406-1a51cc204d12}">
    <Declaration><![CDATA[TYPE ST_PosnTime :
STRUCT
	ValidTargetDestTime : ULINT;
	ValidPosnSrc 	: LREAL;
	ValidPosnSrcTime : ULINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>